<resources>
    <string name="app_name">Fast Market</string>

    <string name="onboardingBtn">Vamos lá!</string>
    <string name="onboardingScene1">Seja bem-vindo ao Fast Market!</string>
    <string name="onboardingScene2">Veja mercados próximos e monte suas listas de forma prática</string>
    <string name="onboardingScene3">Prepare uma rota muito mais rápida!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_button">LOGIN</string>
    <string name="signup_button">CADASTRAR</string>
    <string name="login_to_forgot_password">Esqueci minha senha</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>

    <!-- Login -->
    <string name="login_email_ausente">Por favor, digite o seu email.</string>
    <string name="login_password_ausente">Por favor, digite a sua senha.</string>
    <string name="login_success">Login realizado com sucesso.</string>
    <string name="login_email_senha_errado">Email ou senha incorretos.</string>

    <!-- Sign Up -->
    <string name="signup_email_confirmar_hint">Confirmar email</string>
    <string name="signup_password_confirmar_hint">Confirmar senha</string>
    <string name="signup_back_button">Voltar</string>
    <string name="signup_cadastro_realizado">Cadastro realizado com sucesso!</string>
    <string name="signup_et_ausente">Por favor, preencha todos os campos.</string>
    <string name="signup_emails_diferentes">Emails diferentes.</string>
    <string name="signup_passwords_diferentes">Senhas diferentes.</string>

    <!-- Forgot -->
    <string name="forgot_text">Por favor, digite seu email no campo abaixo e então pressione o botão enviar. Um email será enviado para a redefinição de sua senha.</string>
    <string name="reset_password_email_sent">Email enviado com sucesso!</string>
    <string name="forgot_send_button">ENVIAR</string>
    <string name="forgot_email_missing">Por favor, digite o seu email.</string>
    <string name="forgot_erro">Email não cadastrado.</string>

    <!-- Main -->
    <string name="main_nova_lista">Nova Lista</string>
    <string name="main_listas">Listas</string>
    <string name="main_iniciar_compras">Ir às compras!</string>
    <string name="main_preco">Coming soon...</string>
    <string name="home_chatbot">Alguma dúvida? Pergunte para nosso bot!</string>
    <string name="home_ir_chatbot">Tirar dúvidas!</string>

    <!-- New List -->
    <string name="newlist_bt_add">Adicionar Produto</string>
    <string name="newlist_product_search">Nome do produto</string>
    <string name="newlist_product_no_name">Por favor, digite o produto.</string>
    <string name="newlist_salvar_lista">Salvar Lista</string>
    <string name="newlist_saved">Lista criada com sucesso!</string>
    <string name="newlist_product_not_found">Produto não encontrado! Verifique o nome do produto!</string>

    <!-- List -->
    <string name="list_bt_ir_mercado">Ir para as compras!</string>
    <string name="list_start_new_list">Criar uma nova lista!</string>

    <!-- Maps -->
    <string name="maps_header_products">Pegar o produto:</string>
    <string name="maps_button_next">Peguei! Próximo produto!</string>
    <string name="maps_terminei">Terminei! Ir para o caixa!</string>

    <!-- Profile -->
    <string name="profile_email">Atualmente, conectado à conta:</string>
    <string name="profile_finish_session">Encerrar sessão?</string>
    <string name="profile_sign_out">Logout</string>
</resources>