<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="br.iesb.mobile.fastmarket.ui.fragment.main.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.main.HomeFragment">

        <ImageView
            android:id="@+id/imBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btNovaLista"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/main_nova_lista"
            android:onClick="@{fragment::navNewList}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65" />

        <Button
            android:id="@+id/btListas"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/main_listas"
            android:onClick="@{fragment::navLists}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.647" />

        <Button
            android:id="@+id/btMercados"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/main_mercados"
            android:onClick="@{fragment::navMarket}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/btPrecos"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.PrimaryButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/main_preco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.35" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>